Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <i class="fas fa-envelope"></i>
                     <h4>Email</h4>
                     <p>Drop me a message</p>
-                    <a href="mailto:alvinokonofua@gmail.com" class="contact-link">contact@rosean-x.com</a>
+                    <a href="mailto:alvinokonofua@gmail.com" class="contact-link">alvinokonofua@gmail.com</a>
                 </div>
                 
                 <div class="contact-card">
@@ -274,4 +274,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
